--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,11 @@ dependencies {
     //Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
 
+    implementation "androidx.activity:activity-ktx:1.3.1"
+
+    implementation "androidx.lifecycle:lifecycle-livedata-core-ktx:2.4.0-beta01"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0-beta01"
+
 }
 
 kapt {
