feat : Added navigation feat : added fragment layouts

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures{
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -59,6 +63,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-core-ktx:2.4.0-beta01"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0-beta01"
 
+    // Nav components
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
 }
 
 kapt {
