--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,10 @@ dependencies {
     // Nav components
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
+
+    implementation "io.coil-kt:coil:1.3.2"
+
+    implementation "com.github.bumptech.glide:glide:4.12.0"
 }
 
 kapt {
