--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,11 @@ dependencies {
     implementation "io.coil-kt:coil:1.3.2"
 
     implementation "com.github.bumptech.glide:glide:4.12.0"
+
+    def room_version = "2.3.0"
+    //Room database
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 }
 
 kapt {
