--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,39 +43,37 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation "androidx.activity:activity-ktx:1.3.1"
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //dagger hilt
-    implementation 'com.google.dagger:hilt-android:2.38.1'
-    kapt 'com.google.dagger:hilt-compiler:2.38.1'
+    implementation "com.google.dagger:hilt-android:$hiltVersion"
+    kapt "com.google.dagger:hilt-compiler:$hiltVersion"
 
     //retrofit 2
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
 
     //Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
 
-    implementation "androidx.activity:activity-ktx:1.3.1"
-
-    implementation "androidx.lifecycle:lifecycle-livedata-core-ktx:2.4.0-beta01"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0-beta01"
+    //LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-core-ktx:$liveDataVersion"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$liveDataVersion"
 
     // Nav components
-    implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
-    implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
+    implementation "androidx.navigation:navigation-fragment-ktx:$navComponentsVersion"
+    implementation "androidx.navigation:navigation-ui-ktx:$navComponentsVersion"
 
-    implementation "io.coil-kt:coil:1.3.2"
+    //Glide
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
 
-    implementation "com.github.bumptech.glide:glide:4.12.0"
-
-    def room_version = "2.3.0"
     //Room database
-    implementation "androidx.room:room-runtime:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-runtime:$roomVersion"
+    implementation "androidx.room:room-ktx:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
 }
 
 kapt {
