--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext{
+        hiltVersion = '2.38.1'
+        retrofitVersion = '2.9.0'
+        liveDataVersion ='2.4.0-beta01'
+        glideVersion = '4.12.0'
+        navComponentsVersion = '2.3.5'
+        roomVersion = "2.3.0"
+    }
     repositories {
         google()
         mavenCentral()
